@@ -45,7 +45,9 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 		* Fix for rommel's report of IP filter problem.
 		* No more IsKindOf(), all replaced by dynamic_cast<>().
 		* No more wxDynamicCast(), all replaced by dynamic_cast<>().
-
+		* Fixed multiple instances of event handlers in CClientReqSocketHandler
+		  and CServerSocketHandler.
+		
 	Ken:
 		* Fixed Mac bug: window was a little larger each restart
 		* Fixed aMule.tmpl so Safari can work with amuleweb
